force-app/main/default/objects/Seleccion__c/fields/Catalogo__c.field-meta.xml
<CustomField>
    <fullName>Catalogo__c</fullName>
    <label>Catálogo</label>
    <referenceTo>Catalogo__c</referenceTo>
    <relationshipLabel>Selecciones</relationshipLabel>
    <relationshipName>Selecciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>