force-app/main/default/objects/Seleccion__c/fields/prodClaPrefix__c.field-meta.xml
<CustomField>
    <fullName>prodClaPrefix__c</fullName>
    <label>prodClaPrefix</label>
    <length>2</length>
    <type>Text</type>
</CustomField>