force-app/main/default/objects/Seleccion__c/fields/prodCode__c.field-meta.xml
<CustomField>
    <fullName>prodCode__c</fullName>
    <label>prodCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>