force-app/main/default/objects/Seleccion__c/fields/prodColor__c.field-meta.xml
<CustomField>
    <fullName>prodColor__c</fullName>
    <label>prodColor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>