force-app/main/default/objects/Seleccion__c/fields/prodFamPrefix__c.field-meta.xml
<CustomField>
    <fullName>prodFamPrefix__c</fullName>
    <label>prodFamPrefix</label>
    <length>2</length>
    <type>Text</type>
</CustomField>