force-app/main/default/objects/Seleccion__c/fields/prodId__c.field-meta.xml
<CustomField>
    <fullName>prodId__c</fullName>
    <label>prodId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>