force-app/main/default/objects/Seleccion__c/fields/prodImageId__c.field-meta.xml
<CustomField>
    <fullName>prodImageId__c</fullName>
    <label>prodImageId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>