force-app/main/default/objects/Seleccion__c/fields/prodMeasures__c.field-meta.xml
<CustomField>
    <fullName>prodMeasures__c</fullName>
    <label>prodMeasures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>