force-app/main/default/objects/Seleccion__c/fields/prodName__c.field-meta.xml
<CustomField>
    <fullName>prodName__c</fullName>
    <label>prodName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>