force-app/main/default/objects/Seleccion__c/fields/prodPackaging__c.field-meta.xml
<CustomField>
    <fullName>prodPackaging__c</fullName>
    <label>prodPackaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>