force-app/main/default/objects/Seleccion__c/fields/prodSfmPrefix__c.field-meta.xml
<CustomField>
    <fullName>prodSfmPrefix__c</fullName>
    <label>prodSfmPrefix</label>
    <length>2</length>
    <type>Text</type>
</CustomField>