force-app/main/default/objects/Seleccion__c/fields/selectedPackaging__c.field-meta.xml
<CustomField>
    <fullName>selectedPackaging__c</fullName>
    <label>selectedPackaging</label>
    <length>100</length>
    <type>Text</type>
</CustomField>